--- a/Style.Css
+++ b/Style.Css
@@ -15,7 +15,7 @@ ul
   
 li
 {
-    float: left;
+    float: right;
 }
   
 li a 
@@ -30,5 +30,26 @@ li a
 li a:hover 
 {
     background-color: #111;
+}
+
+li a
+{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.NavImg
+{
+    float: left;
+}
+
+.ImgStyle
+{
+    width: 55px;
+    height: 46px;
+    float:left;
 }
 /*============================{Nav Bar [End]}============================*/
